# termeprompter

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  install.sh
docs/: THEME.md
examples/: demo.txt
src/: app.rs  cli.rs  config.rs  demo.rs  document.rs  importer.rs  input.rs  lib.rs  main.rs  mirror.rs  parser.rs  presentation.rs  render.rs  scroll.rs  terminal.rs  theme.rs  timing.rs
tests/: core.rs
